# bdk-sdk

./: AGENTS.md  README.md  pyproject.toml
api-specs/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/: package-lock.json  package.json
api-specs/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/tsp-output/@typespec/http-client-python/: MANIFEST.in  README.md  pyproject.toml
api-specs/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/tsp-output/@typespec/http-client-python/purviewunifiedcatalog/: __init__.py  _client.py  _configuration.py
api-specs/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/tsp-output/@typespec/http-client-python/purviewunifiedcatalog/aio/: __init__.py  _client.py  _configuration.py
api-specs/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/tsp-output/@typespec/http-client-python/purviewunifiedcatalog/models/: __init__.py  _enums.py  _models.py
scripts/: convert_swagger_to_oas3.py
src/bdk_sdk/: __init__.py  auth.py  catalog.py  config.py  datasources.py  loader.py  resource.py  session.py
src/bdk_sdk/models/: catalog.py  datasource.py  domain.py
src/bdk_sdk/models/_generated/: scanning.py  unified_catalog.py
tests/: conftest.py  test_auth.py  test_catalog_client.py  test_catalog_model.py  test_config.py  test_datasource_model.py  test_datasources.py  test_domain_model.py  test_loader.py  test_resource.py  test_session.py
(+3 files in other folders)
