[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.21,<0.12"]


[project]
name = "bdk-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.64.0",
    "pytest>=9.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.17",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99
indent-width = 4


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
omit = [
    "src/bdk_sdk/models/_generated/*",
]

[tool.pytest.ini_options]
addopts = "--cov=src/bdk_sdk --cov-report term --cov-report html:tests/artifacts/htmlcov"
testpaths = "tests"
pythonpath = "."
